--- a/prereqs/cpp/Makefile
+++ b/prereqs/cpp/Makefile
@@ -20,6 +20,9 @@ CXXFLAGS+=-I$(ARROW_DIR)/include
 
 all: $(CXX_OBJECTS)
 
+printchplflags:
+	$(info --ldflags -Wl,-rpath --ldflags $(ARROW_DIR)/lib -L$(ARROW_DIR)/lib -larrow -lparquet)
+
 # Rule to create object directory if it doesn't exist
 $(OBJDIR):
 	mkdir -p $(OBJDIR)
