Adjust the shared enums file
Signed-off-by: Engin Kayraklioglu <e-kayrakli@users.noreply.github.com>

--- a/prereqs/cpp/Makefile
+++ b/prereqs/cpp/Makefile
@@ -18,6 +18,10 @@ CXXFLAGS=-I$(INCDIR)
 ARROW_DIR=$(shell spack find --paths --no-groups arrow | cut -d\   -f3)
 CXXFLAGS+=-I$(ARROW_DIR)/include
 
+# also add the src directory to be able to include ParquetSharedEnums without
+# relative path
+CXXFLAGS+=-I../../
+
 .PHONY: all clean
 
 all: $(CXX_OBJECTS)
